# GraphicsLibrary

./: .gitignore  CMakeLists.txt  glad.c  main.c
include/: object.h  shaderprogram.h
include/glad/: glad.h
src/: main.c  object.c  shaderprogram.c  shaderprogram.h
src/shaders/: fyi.md  shader1.frag  shader1.vert
